@@ -1,3 +1,10 @@
+2019-11-15  Kwok Cheung Yeung  <kcy@codesourcery.com>
+
+	gcc/
+	* config/gcn/gcn.c (gcn_expand_prologue): Remove initialization and
+	prologue use of v0.
+	(print_operand_address): Use v1 for zero vector offset.
+
 2019-11-15  Richard Sandiford  <richard.sandiford@arm.com>
 
 	PR tree-optimization/92515
